--- a/CuiJian/Base.lproj/Main.storyboard
+++ b/CuiJian/Base.lproj/Main.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="HCF-Xw-WXa">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="HCF-Xw-WXa">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -65,6 +66,13 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="songBgImage" translatesAutoresizingMaskIntoConstraints="NO" id="JXn-bO-iee">
+                                <rect key="frame" x="-4" y="0.0" width="328" height="568"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="songBgParaImage" translatesAutoresizingMaskIntoConstraints="NO" id="ZxL-9I-hTY">
+                                <rect key="frame" x="-36" y="-18" width="392" height="604"/>
+                                <gestureRecognizers/>
+                            </imageView>
                             <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="g2k-J1-ZnN">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="v14-Yi-KjU">
@@ -123,15 +131,24 @@
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="ZxL-9I-hTY" firstAttribute="top" secondItem="3WC-md-Y2t" secondAttribute="topMargin" constant="-18" id="01N-Ae-K8f"/>
+                            <constraint firstItem="ZxL-9I-hTY" firstAttribute="leading" secondItem="3WC-md-Y2t" secondAttribute="leadingMargin" constant="-52" id="2fZ-Jk-LE4"/>
+                            <constraint firstItem="JXn-bO-iee" firstAttribute="leading" secondItem="3WC-md-Y2t" secondAttribute="leadingMargin" constant="-20" id="DQ9-Bj-4bO"/>
+                            <constraint firstItem="JXn-bO-iee" firstAttribute="bottom" secondItem="tkS-Zb-ce8" secondAttribute="top" id="JIl-ZD-Rtk"/>
                             <constraint firstItem="g2k-J1-ZnN" firstAttribute="leading" secondItem="3WC-md-Y2t" secondAttribute="leading" id="LaF-DN-qkJ"/>
+                            <constraint firstItem="ZxL-9I-hTY" firstAttribute="centerY" secondItem="g2k-J1-ZnN" secondAttribute="centerY" id="SGx-A1-YYp"/>
+                            <constraint firstItem="ZxL-9I-hTY" firstAttribute="centerX" secondItem="JXn-bO-iee" secondAttribute="centerX" id="XA4-sG-HAQ"/>
                             <constraint firstItem="g2k-J1-ZnN" firstAttribute="bottom" secondItem="tkS-Zb-ce8" secondAttribute="top" id="aIV-yP-MAK"/>
                             <constraint firstItem="g2k-J1-ZnN" firstAttribute="top" secondItem="3WC-md-Y2t" secondAttribute="top" id="amS-LG-UGL"/>
+                            <constraint firstItem="JXn-bO-iee" firstAttribute="centerX" secondItem="g2k-J1-ZnN" secondAttribute="centerX" id="r0O-2d-Mah"/>
                             <constraint firstAttribute="trailing" secondItem="g2k-J1-ZnN" secondAttribute="trailing" id="rfp-Lq-zQy"/>
+                            <constraint firstItem="JXn-bO-iee" firstAttribute="top" secondItem="g2k-J1-ZnN" secondAttribute="top" id="saG-CH-0Fe"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="UIm-1w-7EQ"/>
                     <nil key="simulatedTopBarMetrics"/>
                     <connections>
+                        <outlet property="bgParaImg" destination="ZxL-9I-hTY" id="C7p-dJ-Gf1"/>
                         <outlet property="mv" destination="iob-cU-15p" id="eXF-Iw-FKq"/>
                         <outlet property="song" destination="5ZM-kK-f7C" id="RGz-Qw-qte"/>
                         <outlet property="timeline" destination="O4g-GB-x8j" id="sob-c8-diU"/>
@@ -159,15 +176,55 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="songBgParaImage" translatesAutoresizingMaskIntoConstraints="NO" id="NRl-Ob-NRd">
                                 <rect key="frame" x="-20" y="-20" width="360" height="568"/>
                             </imageView>
+                            <scrollView multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zH5-TD-gdc">
+                                <rect key="frame" x="36" y="72" width="248" height="248"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="zH5-TD-gdc" secondAttribute="height" multiplier="1:1" id="QQ3-cO-a7H"/>
+                                </constraints>
+                            </scrollView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="tla-T1-7j7">
+                                <rect key="frame" x="116" y="335" width="89" height="83"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="83" id="5mj-gn-2M8"/>
+                                    <constraint firstAttribute="width" constant="89" id="kJO-6A-hEW"/>
+                                </constraints>
+                            </imageView>
+                            <textView clipsSubviews="YES" clearsContextBeforeDrawing="NO" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" usesAttributedText="YES" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Slb-jU-LcK">
+                                <rect key="frame" x="61" y="440" width="197" height="128"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <color key="tintColor" red="0.43137254901960786" green="0.43137254901960786" blue="0.43137254901960786" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="197" id="Gt4-oI-4zQ"/>
+                                </constraints>
+                                <attributedString key="attributedText"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2JZ-j0-VrL">
+                                <rect key="frame" x="274" y="526" width="26" height="22"/>
+                                <state key="normal" image="songListBtn"/>
+                                <connections>
+                                    <segue destination="9co-bn-0qF" kind="push" id="cjh-hn-E6K"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="tla-T1-7j7" firstAttribute="top" secondItem="zH5-TD-gdc" secondAttribute="bottom" constant="15" id="3pC-IY-No3"/>
+                            <constraint firstItem="zH5-TD-gdc" firstAttribute="centerX" secondItem="IWJ-7e-dKr" secondAttribute="centerX" id="5j0-ey-dMO"/>
                             <constraint firstItem="IWJ-7e-dKr" firstAttribute="top" secondItem="yPe-2i-gEZ" secondAttribute="bottom" constant="-64" id="7Qn-TU-a6i"/>
                             <constraint firstItem="NRl-Ob-NRd" firstAttribute="bottom" secondItem="LZG-5n-bgm" secondAttribute="top" constant="-20" id="GUs-bR-Uam"/>
                             <constraint firstItem="NRl-Ob-NRd" firstAttribute="top" secondItem="CuU-OP-32D" secondAttribute="top" constant="-20" id="IaN-K9-0cU"/>
                             <constraint firstItem="LZG-5n-bgm" firstAttribute="top" secondItem="IWJ-7e-dKr" secondAttribute="bottom" id="It7-5P-e5g"/>
+                            <constraint firstItem="LZG-5n-bgm" firstAttribute="top" secondItem="Slb-jU-LcK" secondAttribute="bottom" id="J5U-lZ-OSm"/>
+                            <constraint firstItem="2JZ-j0-VrL" firstAttribute="leading" secondItem="Slb-jU-LcK" secondAttribute="trailing" constant="16" id="JWm-e2-rG9"/>
+                            <constraint firstItem="zH5-TD-gdc" firstAttribute="leading" secondItem="CuU-OP-32D" secondAttribute="leadingMargin" constant="20" id="Kcz-Ue-bVV"/>
                             <constraint firstItem="NRl-Ob-NRd" firstAttribute="leading" secondItem="CuU-OP-32D" secondAttribute="leading" constant="-20" id="MtN-if-XrE"/>
+                            <constraint firstItem="Slb-jU-LcK" firstAttribute="centerX" secondItem="CuU-OP-32D" secondAttribute="centerX" id="QX6-B4-SH2"/>
                             <constraint firstAttribute="trailing" secondItem="NRl-Ob-NRd" secondAttribute="trailing" constant="-20" id="R5f-YG-Hp2"/>
+                            <constraint firstItem="2JZ-j0-VrL" firstAttribute="bottom" secondItem="NRl-Ob-NRd" secondAttribute="bottom" id="TQz-6x-UJc"/>
+                            <constraint firstItem="zH5-TD-gdc" firstAttribute="top" secondItem="yPe-2i-gEZ" secondAttribute="bottom" constant="8" symbolic="YES" id="aP2-HC-a74"/>
+                            <constraint firstItem="tla-T1-7j7" firstAttribute="centerX" secondItem="CuU-OP-32D" secondAttribute="centerX" id="eJj-fm-N0G"/>
+                            <constraint firstItem="Slb-jU-LcK" firstAttribute="top" secondItem="tla-T1-7j7" secondAttribute="bottom" constant="22" id="gpP-hr-fp9"/>
                             <constraint firstItem="IWJ-7e-dKr" firstAttribute="leading" secondItem="CuU-OP-32D" secondAttribute="leadingMargin" constant="-20" id="mi1-jo-Yi1"/>
                             <constraint firstAttribute="trailingMargin" secondItem="IWJ-7e-dKr" secondAttribute="trailing" constant="-20" id="se2-Ho-klp"/>
                         </constraints>
@@ -183,11 +240,39 @@
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
                         <outlet property="bgImageView" destination="NRl-Ob-NRd" id="olk-VO-Xq7"/>
+                        <outlet property="scrollView" destination="zH5-TD-gdc" id="Ugh-ca-IjG"/>
+                        <outlet property="songImg" destination="tla-T1-7j7" id="cj7-0S-kxJ"/>
+                        <outlet property="songText" destination="Slb-jU-LcK" id="qPj-Y0-BDo"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="f7d-0E-8TA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2732" y="-310"/>
+        </scene>
+        <!--专辑列表-->
+        <scene sceneID="HIX-6P-MRW">
+            <objects>
+                <viewController modalPresentationStyle="overCurrentContext" id="9co-bn-0qF" customClass="SongListViewController" customModule="CuiJian" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="sJo-Gi-i2W"/>
+                        <viewControllerLayoutGuide type="bottom" id="bkJ-s3-CAa"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="GF9-DC-QE0">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="专辑列表" id="2Vx-Pc-VC9">
+                        <barButtonItem key="rightBarButtonItem" image="close" id="1PB-oQ-eUT">
+                            <connections>
+                                <action selector="dismiss:" destination="9co-bn-0qF" id="PWB-qe-rjD"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="NxR-lk-Psm" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3156" y="-310"/>
         </scene>
         <!--关于崔健-->
         <scene sceneID="sSe-Qa-XUq">
@@ -235,7 +320,6 @@
                             <constraint firstItem="Glp-Jn-rHd" firstAttribute="top" secondItem="pxS-TV-KVE" secondAttribute="topMargin" id="Qab-vd-o23"/>
                             <constraint firstItem="idK-VD-9y9" firstAttribute="width" secondItem="pxS-TV-KVE" secondAttribute="width" id="TcW-aC-eZ3"/>
                             <constraint firstItem="HNb-hx-hif" firstAttribute="leading" secondItem="QtV-Vh-WKG" secondAttribute="leading" id="WmL-5G-hwD"/>
-                            <constraint firstItem="Glp-Jn-rHd" firstAttribute="top" secondItem="YV3-YC-fMr" secondAttribute="bottom" constant="-64" id="WnV-bF-04E"/>
                             <constraint firstItem="idK-VD-9y9" firstAttribute="top" secondItem="YV3-YC-fMr" secondAttribute="bottom" constant="-64" id="ayG-B5-1L9"/>
                             <constraint firstItem="QtV-Vh-WKG" firstAttribute="bottom" secondItem="Y9q-As-r0U" secondAttribute="top" id="dAJ-KL-hrL"/>
                             <constraint firstAttribute="trailingMargin" secondItem="QtV-Vh-WKG" secondAttribute="trailing" constant="-20" id="eVr-Ho-cFD"/>
@@ -291,8 +375,10 @@
     </scenes>
     <resources>
         <image name="backArrow" width="13" height="21"/>
+        <image name="close" width="18" height="18"/>
         <image name="hamburger" width="23" height="16"/>
         <image name="songBgImage" width="750" height="1334"/>
         <image name="songBgParaImage" width="958" height="1618"/>
+        <image name="songListBtn" width="26" height="16"/>
     </resources>
 </document>
