--- a/CuiJian/Base.lproj/Main.storyboard
+++ b/CuiJian/Base.lproj/Main.storyboard
@@ -172,7 +172,7 @@
                                                         <rect key="frame" x="0.0" y="0.0" width="320" height="101"/>
                                                         <state key="normal" image="aboutCuijianBt"/>
                                                         <connections>
-                                                            <segue destination="cuh-sm-gdg" kind="push" id="GSF-dt-rKh"/>
+                                                            <action selector="AboutClicked:" destination="GFv-yb-n9U" eventType="touchUpInside" id="BA0-Jv-ZDY"/>
                                                         </connections>
                                                     </button>
                                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="splitor" translatesAutoresizingMaskIntoConstraints="NO" id="aPw-pM-SL7">
@@ -409,7 +409,7 @@
                                 </constraints>
                             </imageView>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="7RV-7s-X9M">
-                                <rect key="frame" x="12" y="436" width="244" height="50.5"/>
+                                <rect key="frame" x="12" y="436" width="244" height="51"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="244" id="MYK-D4-JPA"/>
@@ -711,83 +711,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NxR-lk-Psm" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3156" y="-310"/>
-        </scene>
-        <!--关于崔健-->
-        <scene sceneID="sSe-Qa-XUq">
-            <objects>
-                <viewController id="cuh-sm-gdg" customClass="TimeLineViewController" customModule="CuiJian" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="YV3-YC-fMr"/>
-                        <viewControllerLayoutGuide type="bottom" id="Y9q-As-r0U"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="pxS-TV-KVE">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="songBgImage" translatesAutoresizingMaskIntoConstraints="NO" id="Glp-Jn-rHd">
-                                <rect key="frame" x="-4" y="0.0" width="328" height="568"/>
-                            </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="songBgParaImage" translatesAutoresizingMaskIntoConstraints="NO" id="8uD-LC-d7m">
-                                <rect key="frame" x="-32" y="-16" width="392" height="604"/>
-                                <gestureRecognizers/>
-                            </imageView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="idK-VD-9y9">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                            </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HNb-hx-hif" customClass="TimelineSlider" customModule="CuiJian" customModuleProvider="target">
-                                <rect key="frame" x="-4" y="488" width="328" height="80"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                            </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QtV-Vh-WKG" customClass="SlideMaskView" customModule="CuiJian" customModuleProvider="target">
-                                <rect key="frame" x="-4" y="488" width="328" height="80"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="80" id="VJi-N4-fWi"/>
-                                </constraints>
-                            </view>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstAttribute="trailingMargin" secondItem="Glp-Jn-rHd" secondAttribute="trailing" constant="-20" id="1s4-5S-As6"/>
-                            <constraint firstItem="8uD-LC-d7m" firstAttribute="bottom" secondItem="Y9q-As-r0U" secondAttribute="top" constant="20" id="BFh-G3-QGj"/>
-                            <constraint firstItem="Y9q-As-r0U" firstAttribute="top" secondItem="Glp-Jn-rHd" secondAttribute="bottom" id="BzO-xM-BS1"/>
-                            <constraint firstItem="QtV-Vh-WKG" firstAttribute="leading" secondItem="pxS-TV-KVE" secondAttribute="leadingMargin" constant="-20" id="CNo-GC-drA"/>
-                            <constraint firstItem="idK-VD-9y9" firstAttribute="bottom" secondItem="QtV-Vh-WKG" secondAttribute="bottom" constant="-88" id="J3q-4R-7pG"/>
-                            <constraint firstItem="8uD-LC-d7m" firstAttribute="leading" secondItem="pxS-TV-KVE" secondAttribute="leadingMargin" constant="-48" id="QOA-0e-Aig"/>
-                            <constraint firstItem="Glp-Jn-rHd" firstAttribute="top" secondItem="pxS-TV-KVE" secondAttribute="topMargin" id="Qab-vd-o23"/>
-                            <constraint firstItem="idK-VD-9y9" firstAttribute="width" secondItem="pxS-TV-KVE" secondAttribute="width" id="TcW-aC-eZ3"/>
-                            <constraint firstItem="HNb-hx-hif" firstAttribute="leading" secondItem="QtV-Vh-WKG" secondAttribute="leading" id="WmL-5G-hwD"/>
-                            <constraint firstItem="idK-VD-9y9" firstAttribute="top" secondItem="YV3-YC-fMr" secondAttribute="bottom" constant="-64" id="ayG-B5-1L9"/>
-                            <constraint firstItem="QtV-Vh-WKG" firstAttribute="bottom" secondItem="Y9q-As-r0U" secondAttribute="top" id="dAJ-KL-hrL"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="QtV-Vh-WKG" secondAttribute="trailing" constant="-20" id="eVr-Ho-cFD"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="8uD-LC-d7m" secondAttribute="trailing" constant="-56" id="jYH-Bu-AqS"/>
-                            <constraint firstItem="HNb-hx-hif" firstAttribute="height" secondItem="QtV-Vh-WKG" secondAttribute="height" id="l50-JK-O0h"/>
-                            <constraint firstItem="Glp-Jn-rHd" firstAttribute="leading" secondItem="pxS-TV-KVE" secondAttribute="leadingMargin" constant="-20" id="lE3-48-Ork"/>
-                            <constraint firstItem="HNb-hx-hif" firstAttribute="bottom" secondItem="QtV-Vh-WKG" secondAttribute="bottom" id="nRY-70-AO4"/>
-                            <constraint firstItem="8uD-LC-d7m" firstAttribute="top" secondItem="YV3-YC-fMr" secondAttribute="bottom" constant="-80" id="pjj-7X-9oW"/>
-                            <constraint firstItem="idK-VD-9y9" firstAttribute="centerX" secondItem="pxS-TV-KVE" secondAttribute="centerX" id="q2E-cc-Xe7"/>
-                            <constraint firstItem="HNb-hx-hif" firstAttribute="trailing" secondItem="QtV-Vh-WKG" secondAttribute="trailing" id="vz8-5g-mKc"/>
-                        </constraints>
-                    </view>
-                    <navigationItem key="navigationItem" title="关于崔健" id="Onp-n9-j2X">
-                        <barButtonItem key="leftBarButtonItem" image="backArrow" id="O07-pG-38Z">
-                            <connections>
-                                <action selector="dismissVC:" destination="cuh-sm-gdg" id="0kB-7G-wfL"/>
-                            </connections>
-                        </barButtonItem>
-                    </navigationItem>
-                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
-                    <connections>
-                        <outlet property="TimelineSlideView" destination="HNb-hx-hif" id="eSf-wy-iuf"/>
-                        <outlet property="bgImageView" destination="8uD-LC-d7m" id="X2V-LE-t1o"/>
-                        <outlet property="itemsView" destination="idK-VD-9y9" id="x77-e3-NVx"/>
-                        <outlet property="slideMaskView" destination="QtV-Vh-WKG" id="Vmq-5Q-KI1"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="FfH-G8-Ia3" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2732" y="355"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Xps-mj-ShA">
