--- a/CuiJian/MVStoryboard.storyboard
+++ b/CuiJian/MVStoryboard.storyboard
@@ -81,10 +81,119 @@
             </objects>
             <point key="canvasLocation" x="2191" y="491"/>
         </scene>
+        <!--关于崔健-->
+        <scene sceneID="YIn-qX-PfU">
+            <objects>
+                <viewController storyboardIdentifier="aboutController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="Iqr-V8-m9L" customClass="TimeLineViewController" customModule="CuiJian" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="exN-QJ-QEv"/>
+                        <viewControllerLayoutGuide type="bottom" id="EJA-EW-XaI"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="JxB-Ve-ejj">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="star" translatesAutoresizingMaskIntoConstraints="NO" id="VXj-su-O5a">
+                                <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                            </imageView>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="NcA-xo-Hp3">
+                                <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <collectionViewLayout key="collectionViewLayout" id="KF8-rX-6Xs" customClass="CardCollectionViewLayout" customModule="CuiJian" customModuleProvider="target"/>
+                                <cells/>
+                                <connections>
+                                    <outlet property="dataSource" destination="Iqr-V8-m9L" id="nAI-EU-61K"/>
+                                    <outlet property="delegate" destination="Iqr-V8-m9L" id="r1A-SI-3be"/>
+                                </connections>
+                            </collectionView>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="7oD-Xo-hkc">
+                                <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="130" id="Yly-8p-0TP">
+                                        <variation key="heightClass=regular-widthClass=compact" constant="70"/>
+                                    </constraint>
+                                </constraints>
+                            </scrollView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="pointer" translatesAutoresizingMaskIntoConstraints="NO" id="Qa2-LW-dfB">
+                                <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="8" id="0Ad-0i-7cY"/>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="0Ad-0i-7cY"/>
+                                    </mask>
+                                </variation>
+                                <variation key="heightClass=regular-widthClass=compact">
+                                    <mask key="constraints">
+                                        <include reference="0Ad-0i-7cY"/>
+                                    </mask>
+                                </variation>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="NcA-xo-Hp3" firstAttribute="width" secondItem="JxB-Ve-ejj" secondAttribute="width" id="05j-dU-NEC"/>
+                            <constraint firstItem="Qa2-LW-dfB" firstAttribute="width" secondItem="JxB-Ve-ejj" secondAttribute="width" id="EUR-LX-8IS"/>
+                            <constraint firstItem="NcA-xo-Hp3" firstAttribute="centerX" secondItem="JxB-Ve-ejj" secondAttribute="centerX" id="Eh7-2j-Kep"/>
+                            <constraint firstItem="Qa2-LW-dfB" firstAttribute="centerX" secondItem="JxB-Ve-ejj" secondAttribute="centerX" id="F8E-hk-q9X"/>
+                            <constraint firstItem="NcA-xo-Hp3" firstAttribute="centerY" secondItem="JxB-Ve-ejj" secondAttribute="centerY" id="MfK-fs-yIf"/>
+                            <constraint firstItem="7oD-Xo-hkc" firstAttribute="width" secondItem="JxB-Ve-ejj" secondAttribute="width" id="YDB-f2-4Kk"/>
+                            <constraint firstItem="VXj-su-O5a" firstAttribute="centerY" secondItem="JxB-Ve-ejj" secondAttribute="centerY" id="d9t-0D-trt"/>
+                            <constraint firstItem="VXj-su-O5a" firstAttribute="centerX" secondItem="JxB-Ve-ejj" secondAttribute="centerX" id="dvB-TV-mDA"/>
+                            <constraint firstItem="VXj-su-O5a" firstAttribute="height" secondItem="JxB-Ve-ejj" secondAttribute="height" id="esg-n2-zgX"/>
+                            <constraint firstItem="Qa2-LW-dfB" firstAttribute="top" secondItem="7oD-Xo-hkc" secondAttribute="top" id="hFJ-pu-31d"/>
+                            <constraint firstItem="NcA-xo-Hp3" firstAttribute="height" secondItem="JxB-Ve-ejj" secondAttribute="height" id="iW5-0l-DYA"/>
+                            <constraint firstItem="7oD-Xo-hkc" firstAttribute="centerX" secondItem="JxB-Ve-ejj" secondAttribute="centerX" id="nSY-8S-yby"/>
+                            <constraint firstItem="EJA-EW-XaI" firstAttribute="top" secondItem="7oD-Xo-hkc" secondAttribute="bottom" id="u4d-rW-ERp"/>
+                            <constraint firstItem="VXj-su-O5a" firstAttribute="width" secondItem="JxB-Ve-ejj" secondAttribute="width" id="xZm-dP-cGV"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="subviews">
+                                <exclude reference="NcA-xo-Hp3"/>
+                            </mask>
+                            <mask key="constraints">
+                                <exclude reference="05j-dU-NEC"/>
+                                <exclude reference="Eh7-2j-Kep"/>
+                                <exclude reference="MfK-fs-yIf"/>
+                                <exclude reference="iW5-0l-DYA"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=regular-widthClass=compact">
+                            <mask key="subviews">
+                                <include reference="NcA-xo-Hp3"/>
+                            </mask>
+                            <mask key="constraints">
+                                <include reference="05j-dU-NEC"/>
+                                <include reference="Eh7-2j-Kep"/>
+                                <include reference="MfK-fs-yIf"/>
+                                <include reference="iW5-0l-DYA"/>
+                            </mask>
+                        </variation>
+                    </view>
+                    <navigationItem key="navigationItem" title="关于崔健" id="aMK-fO-MoG">
+                        <barButtonItem key="leftBarButtonItem" image="backArrow" id="CG6-7T-YOB">
+                            <connections>
+                                <action selector="backBt:" destination="Iqr-V8-m9L" id="UeI-qm-otr"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <connections>
+                        <outlet property="collectionView" destination="NcA-xo-Hp3" id="Jsb-C8-vJZ"/>
+                        <outlet property="rulerView" destination="7oD-Xo-hkc" id="zE1-iT-Fcb"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="iVS-8x-zI3" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2847" y="489.75"/>
+        </scene>
     </scenes>
     <resources>
         <image name="backArrow" width="13" height="21"/>
         <image name="mvBackground" width="414" height="736"/>
         <image name="mvForzenlight" width="56" height="126"/>
+        <image name="pointer" width="414" height="7"/>
+        <image name="star" width="414" height="736"/>
     </resources>
 </document>
